Detailed section modified

--- a/index.html
+++ b/index.html
@@ -17,17 +17,17 @@
     </header>
     <section class="details">
       <h1>Introduction</h1>
-      <p>Details here...</p>
+      <p>I am support engineer at Microsoft</p>
       <h1>Where I'm From</h1>
-      <p>Details here...</p>
+      <p>Originaly from Japan and been in Seattle area for...20yrs</p>
       <h1>What are your favorite hobbies?</h1>
-      <p>Details here...</p>
+      <p>Kendo(Japanese fencing)</p>
       <h1>What's your dream job?</h1>
-      <p>Details here...</p>
+      <p>I already have dream job(and have hard time)</p>
       <h1>Where do you live?</h1>
-      <p>Details here...</p>
+      <p>Mountlake Terrace</p>
       <h1>Why do you want to be a web developer?</h1>
-      <p>Details here...</p>
+      <p>n/a</p>
     </section>
 
     <footer id="footer">
