--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     </header>
     <section class="details">
       <h1>Introduction</h1>
-      <p>I am support engineer at Microsoft</p>
+      <p>I am support engineer at Microsoft, my support area is all Microsoft Azure PaaS products</p>
       <h1>Where I'm From</h1>
       <p>Originaly from Japan and been in Seattle area for...20yrs</p>
       <h1>What are your favorite hobbies?</h1>
